SQMAGOPC-602: fix alignment

--- a/view/frontend/web/css/payment-page-bypass.css
+++ b/view/frontend/web/css/payment-page-bypass.css
@@ -184,7 +184,7 @@
 
 .paytrail-payment-methods .paytrail-payment-method-logo img {
   width: auto;
-  height: 90%;
+  height: 100%;
 }
 
 .recurring-amount {
